--- a/Aldea-hub.html
+++ b/Aldea-hub.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billow</title>
+    <title>Aldea Hub</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700&display=swap" rel="stylesheet">
@@ -57,8 +57,8 @@
       <div class="b-container">
         <h1> Aldea Hub </h1>
         <p>
-        <b>Role</b> UX, Designer, Visual Designer, UX Research </p>
-        <p><b>Tools</b> Figma, Invision, UsabilityHub</p>
+        <b>Role</b> UX/UI Designer, Visual Designer, UX Research </p>
+        <p><b>Tools</b> Figma, UsabilityHub</p>
         <p><b>Deliverables</b> User Surveys, Personas, Competitive Analysis,
         User Stories & Flows, Paper Prototype, Wireframes, User Testing, Visual
         Design </p>
@@ -72,23 +72,14 @@
 
       <div class="p1s-container">
       <h2>Problem</h2>
-      <p>Current cloud storage services don’t offer a seamless or intuitive user
-      experience. Non-tech users are not considered, which results in hesitation
-      in using cloud storage services. Cloud storage solutions fail to reach
-      their full potential by not looking deeper into their capabilities and
-      exploring features like collaboration, link storage, organization, and
-      customization that optimize the collaborative process.
+      <p>The Latinx community lacks representation in tech and there are very few digital communities that provide resources to advance in this sector.</p>
+
+
       </div>
     <div class="ps2-container">
         <h2>Solution</h2>
-        <p>Billow is a cloud storage service that offers users the ability to
-        customize content organization by providing an initial folder setup
-        based on their needs as individuals, freelancers, or business teams. Users
-        are also able to create content like documents, sheets and notes, organize
-        content, uploading files as well as sharing and collaborating in real-time. These
-        solutions reduce the drag for users of having to figure out how to organize
-        their files and content as well as reducing the amount of external communication
-         with real-time collaboration tools.</p>
+        <p>Aldea Hub; an online community and platform on a mission to help the Latinx community thrive in tech by offering resources, mentorship, and job opportunities.
+</p>
     </div>
     </section>
 
@@ -97,11 +88,8 @@
       <div class="ur1">
         <h2>Research</h2>
         <h3>User Survey</h3>
-        <p>The solutions I came up with are based on the insights gathered on the
-        user surveys where I learned if participants use or don’t use cloud storage,
-        why to use it, what their frustrations, which features they prioritize
-        are and what would motivate them to use it.
-        The survey was completed by 19 participants.</p>
+        <p>The results for the survey further validate the assumption that there is a big need for a platform that helps the Latinx community thrive in tech. It’s interesting to see the importance of Latinx students to have access to entry-level and internship opportunities. This survey informs how to proceed when it comes to the main focus of the platform, which is clear that it would be providing access to careers and community. I'm curious to see the results, once interviews are done, about the specific topics of interest within the resources.
+</p>
         <p><a href="#">View results</a></p>
       </div>
       <div class="insights1">
@@ -122,12 +110,28 @@
 
     </section>
 
+    <section class="ca-section">
+      <h3>Competitive Analysis</h3>
+      <div class="competitors">
+        <div class="airtable">
+          <img class="competitor" src="images/airtable.png" alt="Airtable Logo" >
+        </div>
+      <div class="drive">
+      <img class="competitor" src="images/googledrive.png" alt="Google Drive Logo" >
+      </div>
+      <div class="evernote">
+        <img class="competitor" src="images/evernote.png" alt="Evernote" >
+      </div>
+    </div>
+      <p>Each of these apps has different advantages according to what the community would need. When it comes to the Latinx community in tech, Techqueria seems to be superior because of their offerings and focus on the Latinx community. If the user is looking for a design-centric community, Latinxs Who Design seems like the best choice. Lastly, Diversify Tech has a broader approach since they cater to underrepresented communities in general, with a big focus on development. The results of this analysis prove that there is an opportunity for a new platform focused that covers the community needs for Latinx in tech.
+
+      </p>
+    </section>
+
+
     <section class="user-personas">
       <h2>User Personas</h2>
-      <p>Based on the user surveys, I was able to identify two types of users;
-      the non-user who’s hesitant about using cloud storage because it seems
-      overwhelming and the active user who is interested in trying out a new
-      service that meets her needs.
+      <p>Based on the user surveys, I was able to identify three types of users: the skill builders, the career transitioners, and the non members. </p>
     </section>
 
     <section class="up-2">
@@ -166,10 +170,8 @@
     <section class="ia">
       <h2>Information Architecture</h2>
       <h3>User Flows & User Stories </h3>
-    <p> For the user stories, I focused on what survey participants and personas
-      prioritized. I compiled a list of high and medium priorities to reach
-      the minimum viable product. Based on the user stories, I created user
-      flows to show how users will complete these tasks. </p>
+    <p> For the user stories, I focused on what survey participants and personas prioritized. I compiled a list of high and medium priorities to reach the minimum viable product. Based on the user stories, I created user flows to show how they will complete these tasks.
+ </p>
     </section>
     <section class="table">
           <table>
@@ -231,29 +233,6 @@
         </section>
 
 
-    <section class="ca-section">
-      <h3>Competitive Analysis</h3>
-      <div class="competitors">
-        <div class="airtable">
-          <img class="competitor" src="images/airtable.png" alt="Airtable Logo" >
-        </div>
-      <div class="drive">
-      <img class="competitor" src="images/googledrive.png" alt="Google Drive Logo" >
-      </div>
-      <div class="evernote">
-        <img class="competitor" src="images/evernote.png" alt="Evernote" >
-      </div>
-    </div>
-      <p>After completing this analysis, I realized that each of these apps has different advantages according
-        to the user’s specific needs. For those looking to share files, documents, collaboration, and organizing
-        all of these contents, google drive seems to be at the top. For users looking for more of a project management
-        tool that includes collaboration Airtable might be the best option. Lastly, for those wanting to store, share,
-        and organize notes, Evernote is a good option. All of these competitors have vital offerings and benefits, with
-        Google Drive being the closest as far as crucial features the client provided on the brief. This new product has
-        a lot of opportunities to cover user's needs and concerns that these competitors don’t offer like storage space,
-        file organization, collaboration and sharing options, security, and creating documents.
-      </p>
-    </section>
 
 
 
@@ -265,12 +244,54 @@
   </div>
   <div class="wf-2">
     <p>
-    In this phase, I gathered all insights from research and surveys to go back to the drawing board. It
-    was clear that I needed to create a navigation that was easy to use for active users and non-users
-    who might not be as tech-savvy or might feel overwhelmed with trying new systems.</p>
+      In this phase, I gathered all insights from research and surveys and went  back to the drawing board. I focused on what the tasks users prioritized and created initial sketches based on these findings. The biggest challenge was creating the member dashboard and making sure that all the resource categories and job board where presented in a clear and concise way.
+</p>
 <a href="https://www.figma.com/proto/85UE5MVqKcip1PvJ23IcLP/Cloud-Storage-Wireframes?node-id=71245%3A1&viewport=456%2C53%2C0.04617941752076149&scaling=scale-down">See Wireframes</a>
 </div>
 
+</section>
+
+<section class="brand-1">
+  <h2>The Brand </h2>
+  <h3>Aldea Hub</h3>
+  <p>TThe brand name represents community, Aldea means village in spanish. The name appeals to the importance of community within the Latinxs. The logo is a dimensional interpretation of the traditional community symbol of a village or a hut to evoke a sense of belonging and community.
+
+</p>
+</section>
+<section class="brand-2">
+  <img class="logo-sketches" src="images/logosketchesv2.png" alt="Billow Logo Sketches">
+  <div class="bp-right">
+  <img class="moodboard" src="images/billow-moodboard.png" alt="Billow Brand Moodboard">
+  <img src="images/billowbw.png" alt="Billow Black And White Logo">
+</section>
+
+<section class="palette">
+  <div class="bb-1">
+    <h3>Color Palette & Style Guide</h3>
+    <p>Based on the mood, the brand assets were created. The brand is vibrant, fun, and inclusive, so for the color palette, I used a bright blue followed by accents of orange, bright pink and turquoise for icons, borders, and highlights. A lighter grey was added later on for balance and contrast.
+
+
+</p>
+    <a href="https://www.figma.com/proto/spSSkRZ4R5TJz9i1SCzw2W/Billow-Style-Guide?node-id=0%3A2&viewport=166%2C171%2C0.16887666285037994&scaling=min-zoom">See Brand Guidelines</a>
+  </div>
+<div class="billow-brand">
+    <img src="images/billow-brand.jpg" alt="Billow Brand">
+</div>
+</section>
+
+<section class="hf-mock">
+  <div class="hf-mock1">
+  <h2>Hi-Fi Mockups</h2>
+  <p>
+Following the branding, requirements and user flows, wireframes transformed into hi-fi mockups, focused on the desktop experience. Creating the mockups allowed me to identify the important aspects of the project that can then be tested to determine the MVP and will allow me to organize the deliverables and expectations.
+
+</p>
+  <a href="https://www.figma.com/proto/LBjd4nDoFImgA9dwt8PHsX/Aldea-Hub-Hi-Fi-Mockups?node-id=71411%3A10&viewport=-93%2C2889%2C0.125&scaling=min-zoom">See Mockups</a>
+
+</div>
+  <div class="hf-mock2">
+  <img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
+</div>
 </section>
 
 
@@ -288,46 +309,12 @@
 
   </section>
 
-<section class="brand-1">
-  <h2>Designing the logo to evoke a feeling of Ease </h2>
-  <h3>The brand</h3>
-  <p>The brand name stands to represent a cloud but also how this service flows for users as far as it’s features of
-   creating, collaborating and sharing. The brand will be simple, light, somewhat playful and relatable. It will
-   also give users a  sense of effortlessness. I chose this direction so it appeals to all kinds of users (individuals
-   and teams) that will be using the product while keeping in mind that some can find cloud storage services confusing.
-</p>
-</section>
-<section class="brand-2">
-  <img class="logo-sketches" src="images/logosketchesv2.png" alt="Billow Logo Sketches">
-  <div class="bp-right">
-  <img class="moodboard" src="images/billow-moodboard.png" alt="Billow Brand Moodboard">
-  <img src="images/billowbw.png" alt="Billow Black And White Logo">
-</section>
-
-<section class="palette">
-  <div class="bb-1">
-    <h3>Color Palette & Style Guide</h3>
-    <p>Based on the mood, the brand assets where created. The logo
-     icon is a reinterpretation of a cloud to continue to evoke that
-     feeling of calmness and simplicity. For the logo, I chose a gradient
-     using the lighter blue to light pink. This same gradient is used subtly
-     in some elements like icons and banners. The main accent color is the
-     darker blue which creates balance and harmony with the rest of the shades.</p>
-    <a href="https://www.figma.com/proto/spSSkRZ4R5TJz9i1SCzw2W/Billow-Style-Guide?node-id=0%3A2&viewport=166%2C171%2C0.16887666285037994&scaling=min-zoom">See Brand Guidelines</a>
-  </div>
-<div class="billow-brand">
-    <img src="images/billow-brand.jpg" alt="Billow Brand">
-</div>
-</section>
 
 <section class="hf-mock">
   <div class="hf-mock1">
-  <h2>Hi-Fi MockuPS</h2>
-  <p>Following the branding, requirements and user flows,
-   wireframes transformed into hi-fi mockups focused on the
-   desktop experience. I considered user feedback and design
-   patterns as well to create an interface that was easy to use for
-   both tiers of user personas.
+  <h2>The Prototype</h2>
+  <p>Once the mockups were created and feedback was provided, I created the prototype for user testing . During the creation of the prototype, I realized some menu items had been missing and added additional screens on the job submissions user flow be self explanatory.
+
 </p>
   <a href="#">See Mockups</a>
   <h3>Usability testing 2.0</h3>
@@ -351,16 +338,7 @@
   <img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
 </div>
 </section>
-<section class="pref-test">
-  <h2>Preference testing</h2>
-  <p>After receiving feedback from user testing interviews, I ran a preference test to get
-  even more clarity around specific items of the user interface.</p>
-  <div class="pref-test2">
-    <img src="images/usertest1.jpg" alt="Billow User Test 1">
-    <img src="images/usertest2.jpg" alt="Billow User Test 2">
-    <img src="images/usertest3.jpg" alt="Billow User Test 3">
-  </div>
-</section>
+
 
 <section class="result">
   <h2>The final result</h2>
