--- a/Aldea-hub.html
+++ b/Aldea-hub.html
@@ -114,13 +114,13 @@
       <h3>Competitive Analysis</h3>
       <div class="competitors">
         <div class="airtable">
-          <img class="competitor" src="images/airtable.png" alt="Airtable Logo" >
+          <img class="competitor" src="images/diversify-tech.png" alt="Diversify Tech Logo" >
         </div>
       <div class="drive">
-      <img class="competitor" src="images/googledrive.png" alt="Google Drive Logo" >
+      <img class="competitor" src="images/latinxwhodesign.png" alt="Latinxs Who Design Logo" >
       </div>
       <div class="evernote">
-        <img class="competitor" src="images/evernote.png" alt="Evernote" >
+        <img class="competitor" src="images/techqueria.png" alt="Techqueria" >
       </div>
     </div>
       <p>Each of these apps has different advantages according to what the community would need. When it comes to the Latinx community in tech, Techqueria seems to be superior because of their offerings and focus on the Latinx community. If the user is looking for a design-centric community, Latinxs Who Design seems like the best choice. Lastly, Diversify Tech has a broader approach since they cater to underrepresented communities in general, with a big focus on development. The results of this analysis prove that there is an opportunity for a new platform focused that covers the community needs for Latinx in tech.
@@ -137,32 +137,28 @@
     <section class="up-2">
       <div class="mariap-container">
         <!--   <img class="mariap-test"src="images/mariapdoc.jpg" alt="Maria User Persona"> -->
-      <img class="user-persona" src="images/mariap.svg" alt="Maria User Persona" >
-      <p><b>Maria P.</b>
+      <img class="user-persona" src="images/christyt.svg" alt="Christy T User Persona" >
+      <p><b>Christy T.</b>
       <p>Ux Designer</p>
-      <p><b>Age</b> 27/<b>Location</b> Seattle, WA</p>
-      <p>María is a UX designer based in Seattle,
-      Washington. She splits her time between working
-      at a design studio full time and developing her
-      personal project which is related to altering
-      clothing and sustainability.As a UX enthusiast,
-      she is always open to trying out new products
-      especially if they will meet her needs.</p>
+      <p><b>Age</b> 29/<b>Location</b> Austin,TX</p>
+      <p>Christy is a Conversational UX Designer based in Austin, Texas. She expressed some hesitation about joining a Latinx community in tech because of the lack of collaboration between communities. She is open to joining a community that is interesectional and diverse.
+ </p>
     </div>
       <div class="luisr">
-      <img class="user-persona" src="images/luisr.svg" alt="Luis User Persona" ></a>
-      <p><b>Luis R.</b></p>
-      <p>Ux Designer </p>
-      <p><b>Age</b> 31/<b>Location</b> Brooklyn, NY</p>
-      <p>Luis has been a copywriter for 6+ years and is
-      currently based in New York. Outside of work,
-      he’s a music enthusiasts and enjoys going to
-      concerts frequently. Luis is a creature of habits
-      and can be a bit hesitant to using new services
-      like cloud storage but he is open to trying a
-      service out if it’s user friendly and easy to
-    navigate.
+      <img class="user-persona" src="images/manuv.svg" alt="Manu User Persona" ></a>
+      <p><b>Manu V.</b></p>
+      <p>Art Director </p>
+      <p><b>Age</b> 34/<b>Location</b> Brooklyn, NY</p>
+      <p>Manu is a freelance Art Director/Designer. He works mostly in advertising agencies and design studios. He also enjoys designing movie posters, event flyers, and brand guidelines, to name a few. He says that when you think about the tech industry, you automatically think of the Silicon Valley type of vibe and they’re not well-known for their Latinx community.
   </p>
+</div>
+<div class="luisr">
+<img class="user-persona" src="images/kima.svg" alt="Luis User Persona" ></a>
+<p><b>Kim A.</b></p>
+<p>Ux Designer </p>
+<p><b>Age</b> 29/<b>Location</b> New York, NY</p>
+<p> Kim is currently transitioning to a career in UX Designer. She has a photo and graphic arts/ emerging media background. She currently works at Meero, where she is developing tools for freelancers to help manage their businesses, clients and networking goals. She wants to connect, share information, guide and bond with a community that is similar to her as a Latina.
+</p>
 </div>
   </section>
 
@@ -259,10 +255,10 @@
 </p>
 </section>
 <section class="brand-2">
-  <img class="logo-sketches" src="images/logosketchesv2.png" alt="Billow Logo Sketches">
+  <img class="logo-sketches" src="images/aldea-sketches.jpg" alt="Aldea Hub Logo Sketches">
   <div class="bp-right">
-  <img class="moodboard" src="images/billow-moodboard.png" alt="Billow Brand Moodboard">
-  <img src="images/billowbw.png" alt="Billow Black And White Logo">
+  <img class="moodboard" src="images/aldeamoodboard.jpg" alt="Aldea Hub Brand Moodboard">
+  <img src="images/aldealogosketch.png" alt="Aldea Hub Logo Draft">
 </section>
 
 <section class="palette">
@@ -275,7 +271,7 @@
     <a href="https://www.figma.com/proto/spSSkRZ4R5TJz9i1SCzw2W/Billow-Style-Guide?node-id=0%3A2&viewport=166%2C171%2C0.16887666285037994&scaling=min-zoom">See Brand Guidelines</a>
   </div>
 <div class="billow-brand">
-    <img src="images/billow-brand.jpg" alt="Billow Brand">
+    <img src="images/aldeacolors.png" alt="Billow Brand">
 </div>
 </section>
 
@@ -316,48 +312,31 @@ Following the branding, requirements and user flows, wireframes transformed into
   <p>Once the mockups were created and feedback was provided, I created the prototype for user testing . During the creation of the prototype, I realized some menu items had been missing and added additional screens on the job submissions user flow be self explanatory.
 
 </p>
-  <a href="#">See Mockups</a>
-  <h3>Usability testing 2.0</h3>
-  <p>After implementing the branding and initial changes based on the
-   first round of user testing and adding the branding, I focused this
-   test on similar tasks to make sure that users understand and are
-   able to use the app seamlessly.</p>
+  <a href="https://www.figma.com/proto/VHWI2zJ3RqsCDE4WjTJski/Aldea-Hub-Prototype?node-id=71411%3A10&viewport=355%2C2842%2C0.125&scaling=scale-down-width">See Prototype</a>
+  <h3>User Testing Results</h3>
+  <p>This is where the iteration process focused on user feedback began.
+</p>
   <p>Key takeaways:</p>
   <ul>
-    <li>Change colors on bottom CTA on the homepage so they are easier
-     to read</li>
-   <li>Add icons or some text on the first enrollment screen so that users
-   understand what choosing a free account versus a paid one entails.</li>
-   <li>Adding the option to see “date created” on the list view of the
-   dashboard</li>
-   <li>Revise link sharing options on sharing screen</li>
+    <li>Add additional filter on job search for salary</li>
+   <li>Adding “clues” on the main page about the importance/relevance of the resources available
+</li>
  </ul>
 
 </div>
   <div class="hf-mock2">
-  <img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
+  <img src="images/aldeaproto.gif" alt="Billow Hi Fi Mockups">
 </div>
 </section>
 
 
 <section class="result">
   <h2>The final result</h2>
-  <p>After a few rounds of revisions based on results from user testing, I finalized the cloud service.
-  Minor tweaks were implemented in this round according to the user’s feedback.
+  <p>The process of creating this platform was very informative and insightful. As a Latinx myself, I’ve always felt we are underrepresented in the tech sector. But once the research process started, it made me realize that the options available in Latinx digital communities are very limited. Not all options available offer a full spectrum of resources and support which came across during the user research as well. If I had more time, I would have created more screens for other tasks. I intend to continue the iteration process after launching, so this will allow me to keep adding features, running user tests and finding solutions to user’s concerns about access within the tech sector.
+
 </p>
-<a href="https://invis.io/V5V9M8AMKZ9">Check out the prototype</a>
+<a href="https://www.figma.com/proto/nGgj2EY1GMyfEZ3tbCpaI4/Aldea-Hub-Prototype-Final?node-id=71411%3A10&viewport=487%2C382%2C1&scaling=min-zoom">Check out the prototype</a>
 <br>
-  <h3>Takeaways</h3>
-  <p>Creating this application taught me the importance of testing and prioritizing user’s needs and feedback
-   rather than relying on intuition. This lesson came across multiple times in the visual design phase,
-  preference test and last round of user testing. Aside from user feedback, I also learned the importance
-  of following guidelines and requirements in design as well as staying up to date when it comes to design
-  patterns and best practices. In the design phase, I had some doubts as far as the possibility of creating
-  a product that users could easily relate to and felt comfortable using. One of my biggest surprises was
-  definitely that even those who are hesitant or not inclined to use new technologies were able to
-  understand and use the app without major issues. Lastly, I learned the importance of focusing on key
-  screens first to ensure that the user’s frustrations and key needs are prioritized.
-</p>
 </section>
 
 <section class="b-improv">
