--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
       <h2>PROJECTS</h2>
     </section>
 
+  <!-- <section class="busybus-project">
+        <div class= "busybus-image"><img src="images/aldea-mock1.png" alt="Aldea Hub"></div>
+      <div class="b3-container">
+        <h3>Aldea Hub</h3>
+        <h4>UX Design, Visual Design, User Research & Testing</h4>
+          <a href="BusyBus.html">View Prototype</a>
+      </div>
+      <div class="sq-container">
+      <img class="right-square"><img src="images/right-rectangle.png" alt="black bar">
+      </div>
+    </section> -->
+
     <section class="billow-project">
       <i class="left-square"><img src="images/left-rectangle.png" alt="Orange Box"></i>
       <div class= "b1-container">
