nav bar updates

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
      <!-- Overlay content -->
      <div class="overlay-content">
+       <a href="https://www.juliannarodriguezdolsen.com/">Clients</a>
        <a class="active" href="index.html">Work</a>
        <a href="About.html">About</a>
        <a href="Contact.html">Contact</a>
