--- a/index.html
+++ b/index.html
@@ -28,25 +28,13 @@
 <section class="main-menu">
   <a class="logo-icon" href="index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
   <nav class="topnav">
+     <a href="https://www.juliannarodriguezdolsen.com/">Clients</a>
   <a class="active" href="#projects">Work</a>
   <a href="About.html">About</a>
   <a href="Contact.html">Contact</a>
   </nav>
 </section>
 
-
-<!-- Load an icon library to show a hamburger menu (bars) on small screens
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<div class="mobilenav" id="mymobilenav">
-  <a class="active" href="index.html">Work</a>
-  <a href="About.html">About</a>
-  <a href="Contact.html">Contact</a>
-  </div>
-  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-<!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-   -->
 
    <!-- The overlay -->
    <div id="myNav" class="overlay">
@@ -83,17 +71,6 @@
       <h2>PROJECTS</h2>
     </section>
 
-  <!-- <section class="busybus-project">
-        <div class= "busybus-image"><img src="images/aldea-mock1.png" alt="Aldea Hub"></div>
-      <div class="b3-container">
-        <h3>Aldea Hub</h3>
-        <h4>UX Design, Visual Design, User Research & Testing</h4>
-          <a href="BusyBus.html">View Prototype</a>
-      </div>
-      <div class="sq-container">
-      <img class="right-square"><img src="images/right-rectangle.png" alt="black bar">
-      </div>
-    </section> -->
 
     <section class="billow-project">
       <i class="left-square"><img src="images/left-rectangle.png" alt="Orange Box"></i>
