--- a/Aldea-hub.html
+++ b/Aldea-hub.html
@@ -128,15 +128,14 @@
       </p>
     </section>
 
+    <section class="ia">
 
-    <section class="user-personas">
       <h2>User Personas</h2>
       <p>Based on the user surveys, I was able to identify three types of users: the skill builders, the career transitioners, and the non members. </p>
     </section>
 
-    <section class="up-2">
+    <section class="up-3">
       <div class="mariap-container">
-        <!--   <img class="mariap-test"src="images/mariapdoc.jpg" alt="Maria User Persona"> -->
       <img class="user-persona" src="images/christyt.svg" alt="Christy T User Persona" >
       <p><b>Christy T.</b>
       <p>Ux Designer</p>
@@ -160,6 +159,10 @@
 <p> Kim is currently transitioning to a career in UX Designer. She has a photo and graphic arts/ emerging media background. She currently works at Meero, where she is developing tools for freelancers to help manage their businesses, clients and networking goals. She wants to connect, share information, guide and bond with a community that is similar to her as a Latina.
 </p>
 </div>
+</section>
+
+    <section class="user-personas">
+
   </section>
 
 
@@ -169,7 +172,7 @@
     <p> For the user stories, I focused on what survey participants and personas prioritized. I compiled a list of high and medium priorities to reach the minimum viable product. Based on the user stories, I created user flows to show how they will complete these tasks.
  </p>
     </section>
-    <section class="table">
+  <section class="table">
           <table>
           <tr>
           <th>User Type</th>
@@ -223,7 +226,7 @@
           </tr>
         </table>
         <div class="user-flow">
-        <img class="user-flows" src="images/user-flows.png" alt="Billow User Flows" ></a>
+        <img class="user-flows" src="images/user-flows.png" alt="x User Flows" ></a>
         </div>
 
         </section>
@@ -236,7 +239,7 @@
     <h2>Wireframes</h2>
     <div class="wf-container">
     <img class="wireframes" src="images/wireframesketches.jpeg" alt="Billow Wireframe Sketches" >
-    <img class="wireframes" src="images/wireframes-lowfi.png" alt="Billow Low Fi Wireframes" >
+    <img class="wireframes" src="images/aldea-wireframes.png" alt="Aldea Hub Low Fi Wireframes" >
   </div>
   <div class="wf-2">
     <p>
@@ -292,7 +295,7 @@ Following the branding, requirements and user flows, wireframes transformed into
 
 
   <section class="ut-1">
-  <h3>Usability Testing Round 1</h3>
+  <!--   <h3>Usability Testing Round 1</h3>
   <p>This is where the iteration process began, the following are the key takeaways from this round:</p>
   <ul>
     <li>Main CTA on homepage must be revised it should probably make reference to each of the
@@ -301,7 +304,7 @@ Following the branding, requirements and user flows, wireframes transformed into
      <li>Revise the wording on the upload window’s CTA it can say upload rather than open to avoid
        confusion</li>
        <li>Adding file/folder information on the dashboard (list view) as suggested by Manuel</li>
-  </ul>
+  </ul> -->
 
   </section>
 
