--- a/index.html
+++ b/index.html
@@ -63,14 +63,29 @@
       <h1> Hi, <a class="home-link" href="About.html">I’M Julianna</a> a UX Designer
     Based in Brooklyn, New York </h1>
   </div>
+      <!-- <a href='About.html'><button class="c-button">About Me</button></a> -->
     </section>
+
     <a href="#"></a>
 
+
+    </section>
     <section class="projects">
       <a name="projects"></a>
       <h2>PROJECTS</h2>
     </section>
-
+    <!-- -->
+    <section class="busybus-project">
+           <div class="aldea-img"><img src="images/aldea-hub-1.png" alt="Aldea Hub"></div>
+         <div class="b3-container">
+           <h3>Aldea Hub</h3>
+           <h4>UX Design, Visual Design, User Research & Testing</h4>
+             <a href="https://www.figma.com/proto/nGgj2EY1GMyfEZ3tbCpaI4/Aldea-Hub-Prototype-Final?node-id=71411%3A10&viewport=280%2C1533%2C0.0625&scaling=min-zoom" target="_blank" >View Prototype</a>
+         </div>
+         <div class="sq-container">
+         <img class="right-square"><img src="images/right-rectangle.png" alt="black bar">
+         </div>
+       </section>
 
     <section class="billow-project">
       <i class="left-square"><img src="images/left-rectangle.png" alt="Orange Box"></i>
